--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.12" />
+
+    <TextView
+        android:id="@+id/txtCarros"
+        android:layout_width="323dp"
+        android:layout_height="133dp"
+        android:text="&quot;Carros&quot;, lançado pela Pixar em 2006, conta a história de Relâmpago McQueen, um carro de corrida ambicioso que, após se perder em uma cidade esquecida na Rota 66, aprende o valor da amizade e da humildade. Durante sua estadia em Radiator Springs, ele descobre que a vida é mais do que apenas velocidade e vitórias, mas sim sobre as conexões que fazemos ao longo do caminho."
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.322" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
